[gd_scene load_steps=4 format=2]

[ext_resource path="res://bestia_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/GameUI/AttackList/AttackRow/AttackRow.gd" type="Script" id=2]
[ext_resource path="res://placeholder.png" type="Texture" id=3]

[node name="AttackRow" type="VBoxContainer"]
margin_right = 305.0
margin_bottom = 52.0
mouse_filter = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 305.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 10

[node name="AttackWrapper" type="HBoxContainer" parent="MarginContainer"]
margin_right = 295.0
margin_bottom = 40.0

[node name="IconMargin" type="MarginContainer" parent="MarginContainer/AttackWrapper"]
margin_right = 50.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/AttackWrapper/IconMargin"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/AttackWrapper/IconMargin/CenterContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="AttackText" type="VBoxContainer" parent="MarginContainer/AttackWrapper"]
margin_left = 54.0
margin_right = 223.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="AttackName" type="Label" parent="MarginContainer/AttackWrapper/AttackText"]
margin_right = 169.0
margin_bottom = 20.0
text = "Tackle"

[node name="AttackElement" type="Label" parent="MarginContainer/AttackWrapper/AttackText"]
margin_top = 20.0
margin_right = 169.0
margin_bottom = 40.0
text = "Element"

[node name="MarginMana" type="MarginContainer" parent="MarginContainer/AttackWrapper"]
margin_left = 227.0
margin_right = 253.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 10

[node name="Mana" type="Label" parent="MarginContainer/AttackWrapper/MarginMana"]
margin_top = 10.0
margin_right = 16.0
margin_bottom = 30.0
text = "10"

[node name="Lv" type="Label" parent="MarginContainer/AttackWrapper"]
margin_left = 257.0
margin_top = 10.0
margin_right = 295.0
margin_bottom = 30.0
text = "Lv. 10"

[node name="BottomSeperator" type="HSeparator" parent="."]
margin_top = 44.0
margin_right = 305.0
margin_bottom = 48.0
[connection signal="gui_input" from="." to="." method="_on_AttackRow_gui_input"]
